syntax = "proto3";

package NAlice.NScenarios;

option go_package = "a.yandex-team.ru/alice/megamind/protos/scenarios";
option java_package = "ru.yandex.alice.megamind.protos.scenarios";
option java_outer_classname = "AnalyticsInfo";

import "alice/library/censor/protos/extension.proto";
import "alice/library/field_differ/protos/extension.proto";

import "alice/megamind/protos/analytics/scenarios/advisers/movie_akinator.proto";
import "alice/megamind/protos/analytics/scenarios/dialogovo/dialogovo.proto";
import "alice/megamind/protos/analytics/scenarios/general_conversation/general_conversation.proto";
import "alice/megamind/protos/analytics/scenarios/iot/iot.proto";
import "alice/megamind/protos/analytics/scenarios/music/music.proto";
import "alice/megamind/protos/analytics/scenarios/search/search.proto";
import "alice/megamind/protos/analytics/scenarios/taxi/taxi.proto";
import "alice/megamind/protos/analytics/scenarios/video/video.proto";
import "alice/megamind/protos/analytics/scenarios/vins/vins.proto";
import "alice/protos/analytics/dummy_response/response.proto";
import "alice/protos/analytics/goods/best_prices.proto";
import "alice/protos/analytics/goods/goods_request.proto";
import "alice/protos/data/language/language.proto";
import "alice/protos/data/contacts.proto";
import "alice/protos/data/scenario/music/content_id.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

import "mapreduce/yt/interface/protos/extension.proto";

message TAnalyticsInfo {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    // Actions in scenario
    message TAction {
        option (NYT.default_field_flags) = SERIALIZATION_YT;

        reserved 56788;

        string Id = 1 [json_name = "id", (NYT.column_name) = "id"];
        string Name = 2 [json_name = "name", (NYT.column_name) = "name"];
        string HumanReadable = 3 [json_name = "human_readable", (NYT.column_name) = "human_readable"];

        oneof Payload {
            google.protobuf.Empty Empty = 4 [json_name = "empty", (NYT.column_name) = "empty"];
            NAlice.NDialogovo.TThereminPlayActionPayload ThereminPlay = 5 [json_name = "theremin_play", (NYT.column_name) = "theremin_play"];
            NAlice.NDialogovo.TSkillActivationActionPayload SkillActivation = 6 [json_name = "skill_activation", (NYT.column_name) = "skill_activation"];
            NAlice.NDialogovo.TAudioPlayerControlActionPayload AudioPlayerControlAction = 7 [json_name = "audio_player_action", (NYT.column_name) = "audio_player_action"];
            NAlice.NDialogovo.TAudioPlayerCallbackActionPayload AudioPlayerCallbackAction = 8 [json_name = "audio_player_callback_action", (NYT.column_name) = "audio_player_callback_action"];
            NAlice.NData.TContactsList.TContact Callee = 9 [json_name = "callee", (NYT.column_name) = "callee"];
        }
    }

    // Used objects in scenario
    message TObject {
        option (NYT.default_field_flags) = SERIALIZATION_YT;

        string Id = 1 [json_name = "id", (NYT.column_name) = "id"];
        string Name = 2 [json_name = "name", (NYT.column_name) = "name"];
        string HumanReadable = 3 [json_name = "human_readable", (NYT.column_name) = "human_readable"];

        reserved 5, 56788;

        oneof Payload {
            google.protobuf.Empty Empty = 4 [json_name = "empty", (NYT.column_name) = "empty"];
            // reserved 5;
            NAlice.NDialogovo.TSkill Skill = 6 [json_name = "skill", (NYT.column_name) = "skill"];
            NAlice.NDialogovo.TSkillUser SkillUser = 7 [json_name = "skill_user", (NYT.column_name) = "skill_user"];
            NAlice.NDialogovo.TSkillSession SkillSession = 8 [json_name = "skill_session", (NYT.column_name) = "skill_session"];

            NAlice.NVideo.TDescriptionScreen VideoDescriptionScreen = 9 [json_name = "video_description_screen", (NYT.column_name) = "video_description_screen"];
            NAlice.NVideo.TSearchGalleryScreen VideoSearchGalleryScreen = 10 [json_name = "video_search_gallery", (NYT.column_name) = "video_search_gallery"];
            NAlice.NVideo.TSeasonGalleryScreen VideoSeasonGalleryScreen = 11 [json_name = "video_season_gallery", (NYT.column_name) = "video_season_gallery"];

            NGeneralConversation.TGCResponseInfo GCResponseInfo = 12 [json_name = "gc_response_info", (NYT.column_name) = "gc_response_info"];

            NVins.TVinsGcMeta VinsGcMeta = 13 [json_name = "vins_gc_meta", (NYT.column_name) = "vins_gc_meta"];
            NVins.TVinsErrorMeta VinsErrorMeta = 14 [json_name = "vins_error_meta", (NYT.column_name) = "vins_error_meta"];

            NMusic.TTrack FirstTrack = 15 [json_name = "first_track", (NYT.column_name) = "first_track"];

            NAlice.NDialogovo.TSkillRecommendations SkillRecommendations = 16 [json_name = "skill_recommendations", (NYT.column_name) = "skill_recommendations"];

            NMovieAkinator.TMovieAkinatorResponseInfo MovieAkinatorResponseInfo = 17 [json_name = "movie_akinator_response_info", (NYT.column_name) = "movie_akinator_response_info"];

            NAlice.NDialogovo.TRecipe Recipe = 18 [json_name = "recipe", (NYT.column_name) = "recipe"];
            NAlice.NDialogovo.TRecipeStep RecipeStep = 19 [json_name = "recipe_step", (NYT.column_name) = "recipe_step"];
            NAlice.NDialogovo.TRecipeSession RecipeSession = 20 [json_name = "recipe_session", (NYT.column_name) = "recipe_session"];
            NAlice.NDialogovo.TAudioStream AudioStream = 21 [json_name = "audio_stream", (NYT.column_name) = "audio_stream"];

            NAlice.NIoT.THypotheses Hypotheses = 22 [json_name = "hypotheses", (NYT.column_name) = "hypotheses"];
            NAlice.NIoT.TSelectedHypotheses SelectedHypotheses = 23 [json_name = "selected_hypotheses", (NYT.column_name) = "selected_hypotheses"];

            NAlice.NVideo.TCurrentlyPlayingVideo CurrentlyPlayingVideo = 24 [json_name = "currently_playing_video", (NYT.column_name) = "currently_playing_video"];

            NAlice.NTaxi.TOrder TaxiOrder = 25 [json_name = "taxi_order", (NYT.column_name) = "taxi_order"];

            NAlice.NDialogovo.TNewsProvider NewsProvider = 26 [json_name = "news_provider", (NYT.column_name) = "news_provider"];

            NAlice.NSearch.TSearchFact SearchFact = 27 [json_name = "search_fact", (NYT.column_name) = "search_fact"];

            NAlice.NData.TContactsList MatchedContacts = 28 [json_name = "matched_contacts", (NYT.column_name) = "matched_contacts"];

            NAlice.NData.TContactsList PhoneBook = 29 [json_name = "phone_book", (NYT.column_name) = "phone_book", (NAlice.FieldAccess) = A_PRIVATE_REQUEST, (NAlice.FieldAccess) = A_PRIVATE_RESPONSE];

            NGoodsBestPrices.TBestPricesRequest BestPricesRequest = 30 [json_name = "best_price_request", (NYT.column_name) = "best_price_request", deprecated = true];
            NAlice.NAnalytics.NGoodsRequest.TGoodsRequest GoodsRequest = 31 [json_name = "goods_request", (NYT.column_name) = "goods_request"];

            NAlice.NIoT.TReactions IotReactions = 32 [json_name = "iot_reactions", (NYT.column_name) = "iot_reactions"];

            NAlice.NData.NMusic.TContentId ContentId = 33 [json_name = "content_id", (NYT.column_name) = "content_id"];

            NAlice.NAnalytics.NDummyResponse.TResponse DummyResponse = 34 [json_name = "dummy_response", (NYT.column_name) = "dummy_response"];

            NAlice.NDialogovo.TSkillSuggestedExit SkillProactivitySuggestExit = 35 [json_name = "skill_proactivity_suggest_exit", (NYT.column_name) = "skill_proactivity_suggest_exit"];

            NAlice.NSearch.TSearchGenericInfo SearchGenericInfo = 36 [json_name = "search_generic_info", (NYT.column_name) = "search_generic_info"];
        }
    }

    // Events
    message TEvent {
        option (NYT.default_field_flags) = SERIALIZATION_YT;

        reserved 56788;

        message TRequestSourceEvent {
            option (NYT.default_field_flags) = SERIALIZATION_YT;

            string Source = 1 [json_name = "source", (NYT.column_name) = "source"];
            map<string, string> CGI = 2 [json_name = "cgi", (NYT.column_name) = "cgi", (NYT.flags) = MAP_AS_DICT];
            map<string, string> Headers = 3 [json_name = "headers", (NYT.column_name) = "headers", (NYT.flags) = MAP_AS_DICT];
            uint32 ResponseCode = 4 [json_name = "response_code", (NYT.column_name) = "response_code"];
            string ResponseBody = 5 [json_name = "response_body", (NYT.column_name) = "response_body"];
            bool ResponseSuccess = 6 [json_name = "response_success", (NYT.column_name) = "response_success"];
        }
        message TSelectedSourceEvent {
            option (NYT.default_field_flags) = SERIALIZATION_YT;

            string Source = 1 [json_name = "source", (NYT.column_name) = "source"];
        }
        message TSelectedWebDocumentEvent {
            option (NYT.default_field_flags) = SERIALIZATION_YT;

            string SearchType = 1 [json_name = "search_type", (NYT.column_name) = "search_type"]; // like 'music_web_search'
            string RequestId = 2 [json_name = "request_id", (NYT.column_name) = "request_id"]; // vins/megamind
            string SearchRequestId = 3 [json_name = "search_request_id", (NYT.column_name) = "search_request_id"];
            string DocumentUrl = 4 [json_name = "document_url", (NYT.column_name) = "document_url"];
            uint32 DocumentPos = 5 [json_name = "document_pos", (NYT.column_name) = "document_pos"];
            string CatalogUrl = 6 [json_name = "catalog_url", (NYT.column_name) = "catalog_url"];
            string AnswerUrl = 7 [json_name = "answer_url", (NYT.column_name) = "answer_url"];
        }
        message TRatedVideoEvent {
            option (NYT.default_field_flags) = SERIALIZATION_YT;

            string Title = 1 [(NYT.column_name) = "title"];
            string ProviderItemId = 2 [(NYT.column_name) = "provider_item_id"];
            string ProviderName = 3 [(NYT.column_name) = "provider_name"];
            string TextRating = 4 [(NYT.column_name) = "text_rating"];
            int32 Rating = 5 [(NYT.column_name) = "rating"];
        }
        message TMusicEvent {
            option (NYT.default_field_flags) = SERIALIZATION_YT;

            enum EAnswerType {
                Unknown = 0;
                Track = 1;
                Album = 2;
                Artist = 3;
                Playlist = 4;
                Radio = 5;
                Filters = 6;
                Generative = 7;
                FmRadio = 8;
            }
            EAnswerType AnswerType = 1 [json_name = "answer_type", (NYT.column_name) = "answer_type"];
            string Id = 2 [json_name = "id", (NYT.column_name) = "id"]; // "uid:kind" for playlists, inconsistent for filters (first track ID or nothing)
            string Uri = 3 [json_name = "uri", (NYT.column_name) = "uri"]; // depends on the music provider, absent for filters
        }
        message TVideoRequestSourceEvent {
            option (NYT.default_field_flags) = SERIALIZATION_YT;

            string Source = 1 [json_name = "source", (NYT.column_name) = "source"];
            map<string, string> CGI = 2 [json_name = "cgi", (NYT.column_name) = "cgi", (NYT.flags) = MAP_AS_DICT];
            map<string, string> Headers = 3 [json_name = "headers", (NYT.column_name) = "headers", (NYT.flags) = MAP_AS_DICT];
            uint32 ResponseCode = 4 [json_name = "response_code", (NYT.column_name) = "response_code"];
            string ResponseBody = 5 [json_name = "response_body", (NYT.column_name) = "response_body"];
            bool ResponseSuccess = 6 [json_name = "response_success", (NYT.column_name) = "response_success"];
            string RequestUrl = 7 [json_name = "request_url", (NYT.column_name) = "request_url"];
            string RequestText = 8 [json_name = "request_text", (NYT.column_name) = "request_text"];
        }
        message TMusicMonitoringEvent {
            option (NYT.default_field_flags) = SERIALIZATION_YT;

            bool BatchOfTracksRequested = 1 [json_name = "batch_of_tracks_requested", (NYT.column_name) = "batch_of_tracks_requested"];
            bool CacheHit = 2 [json_name = "cache_hit", (NYT.column_name) = "cache_hit"];
        }

        uint64 Timestamp = 1 [json_name = "timestamp", (NYT.column_name) = "timestamp"];
        oneof Event {
            TRequestSourceEvent RequestSourceEvent = 2 [json_name = "request_source_event", (NYT.column_name) = "request_source_event"]; // Request to external service
            NAlice.NDialogovo.TRequestSkillWebhookEvent RequestSkillWebhookEvent = 3 [json_name = "request_skill_webhook", (NYT.column_name) = "request_skill_webhook"];
            TSelectedSourceEvent SelectedSourceEvent = 4 [json_name = "selected_source_event", (NYT.column_name) = "selected_source_event"]; // Select one source
            // Searched for something, found docs, selected one (and maybe also selected catalog and answer)
            TSelectedWebDocumentEvent SelectedWebDocumentEvent = 5 [json_name = "selected_web_document_event", (NYT.column_name) = "selected_web_document_event"];
            TRatedVideoEvent RatedVideoEvent = 6 [(NYT.column_name) = "rated_video_event"];
            TMusicEvent MusicEvent = 7 [json_name = "music_event", (NYT.column_name) = "music_event"];
            NAlice.NDialogovo.TFallbackDetectedEvent SkillReplyFallbackDetected = 8 [json_name = "skill_reply_fallback_detected", (NYT.column_name) = "skill_reply_fallback_detected"];
            // Deprecated, use NAlice.NDialogovo.TSkillSuggestedExit info object instead
            NAlice.NDialogovo.TSuggestedExitEvent SkillSuggestedExit = 9 [json_name = "skill_suggested_exit", (NYT.column_name) = "skill_suggested_exit"];
            NAlice.NDialogovo.TFeedbackRequestedEvent SkillFeedbackRequested = 10 [json_name = "skill_feedback_requested", (NYT.column_name) = "skill_feedback_requested"];
            NAlice.NDialogovo.TFeedbackSavedEvent SkillFeedbackSaved = 11 [json_name = "skill_feedback_saved", (NYT.column_name) = "skill_feedback_saved"];
            NAlice.NDialogovo.TFeedbackUnknownRatingEvent SkillFeedbackUnknownRating = 12 [json_name = "skill_feedback_unknown_rating", (NYT.column_name) = "skill_feedback_unknown_rating"];
            NAlice.NDialogovo.TRecipeProactiveSuggestEvent RecipeProactiveSuggest = 13 [json_name = "recipe_proactive_suggest", (NYT.column_name) = "recipe_proactive_suggest"];
			TVideoRequestSourceEvent VideoRequestSourceEvent = 14 [json_name = "video_request_source_event", (NYT.column_name) = "video_request_source_event"]; // Video request to external service
            TMusicMonitoringEvent MusicMonitoringEvent = 15 [json_name = "music_monitoring_event", (NYT.column_name) = "music_monitoring_event"];
        }
    }

    message TScenarioStageTimings {
        option (NYT.default_field_flags) = SERIALIZATION_YT;

        uint64 StartTimestamp = 1 [json_name = "start_timestamp", (NYT.column_name) = "start_timestamp"];
        map<string, uint64> SourceResponseDurations = 2 [json_name = "source_response_durations", (NYT.column_name) = "source_response_durations", (NYT.flags) = MAP_AS_DICT];
    }

    message TScenarioTimings {
        option (NYT.default_field_flags) = SERIALIZATION_YT;

        map<string, TScenarioStageTimings> Timings = 1 [json_name = "timings", (NYT.column_name) = "timings", (NYT.flags) = MAP_AS_DICT];
    }

    message TNlgRenderHistoryRecord {
        option (NYT.default_field_flags) = SERIALIZATION_YT;

        string TemplateName = 1 [json_name = "template_name", (NYT.column_name) = "template_name"];
        oneof ElementName {
            string PhraseName = 2 [json_name = "phrase_name", (NYT.column_name) = "phrase_name"];
            string CardName = 3 [json_name = "card_name", (NYT.column_name) = "card_name"];
        }
        google.protobuf.Struct Context = 4 [json_name = "context", (NYT.column_name) = "context", (NYT.flags) = SERIALIZATION_PROTOBUF];
        google.protobuf.Struct ReqInfo = 5 [json_name = "req_info", (NYT.column_name) = "req_info", (NYT.flags) = SERIALIZATION_PROTOBUF];
        google.protobuf.Struct Form = 6 [json_name = "form", (NYT.column_name) = "form", (NYT.flags) = SERIALIZATION_PROTOBUF];
        ELang Language = 7 [json_name = "language", (NYT.column_name) = "language"];
    }

    reserved 1;
    string Intent = 2 [json_name = "intent", (NYT.column_name) = "intent"]; // intent name

    reserved 3;
    repeated TAction Actions = 4 [json_name = "actions", (NYT.column_name) = "actions", (FieldAccess) = A_PRIVATE_RESPONSE];
    repeated TObject Objects = 5 [json_name = "objects", (NYT.column_name) = "objects", (FieldAccess) = A_PRIVATE_RESPONSE];
    reserved 6;
    repeated TEvent Events = 7 [json_name = "events", (NYT.column_name) = "events", (FieldAccess) = A_PRIVATE_RESPONSE];
    repeated string TunnellerRawResponses = 8 [json_name = "tunneller_raw_responses", (NYT.column_name) = "tunneller_raw_responses"];

    string ProductScenarioName = 9 [json_name = "product_scenario_name", (NYT.column_name) = "product_scenario_name", (ImportantFieldCheck) = IFC_PRESENCE];
    TScenarioTimings ScenarioTimings = 10 [json_name = "stage_timings", (NYT.column_name) = "stage_timings"];
    repeated TNlgRenderHistoryRecord NlgRenderHistoryRecords = 11 [json_name = "nlg_render_history_records", (NYT.column_name) = "nlg_render_history_records", (FieldAccess) = A_PRIVATE_RESPONSE];
}
